init: Initialize React/Vite game project with core game engine, UI, and assets, replacing old styling and main script.

--- a/연금술사 오토 배틀러 기획서.md
+++ b/연금술사 오토 배틀러 기획서.md
@@ -5,57 +5,51 @@
 * **프로젝트명**: 연금술사 오토 배틀러 (Alchemist Auto-Battler)
 * **핵심 콘셉트**: 플레이어(골렘)가 4x4 마방진(빙고 그리드)에 무작위로 채워지는 4가지 원소 카드의 조합(빙고)을 활용하여 자동으로 적(잡몹)을 물리치는 오토 배틀러 게임.
 * **기술 스택**:  
-  * 스타일링: Tailwind CSS (CDN)
-  * 로직: 순수 JavaScript (ES6 모듈)
-* **언어**: 한국어 (v1.3 업데이트)
+  * 프레임워크: React (Vite)
+  * 스타일링: Tailwind CSS
+  * 언어: JavaScript (ES6+)
 
-## **2. 화면 구성 (UI 레이아웃) - 수정됨**
+## **2. 화면 구성 (UI 레이아웃)**
 
-게임 화면은 16:9 비율을 가지며, 크게 3개의 수직 컬럼으로 구성된다.
+전체 애플리케이션은 네비게이션 바를 통해 접근 가능한 4개의 주요 페이지로 구성된다.
 
-* **상단 바 (Header)**
-  * 게임 제목 및 버전 (v1.3)
+### **2.1. 공통 레이아웃**
+* **상단 네비게이션 바**:
+  * 페이지 이동 탭: [전투], [로그], [덱 구성], [유물]
   * **에셋 토글 버튼**: 이모지 모드 / 이미지 모드 전환
-  * **로그 보기 버튼**: 전투 로그 모달 열기
 
-* **컬럼 1 (좌측): 아군 (골렘) 정보**
-  * 이름: "골렘 (아군)"
-  * 에셋 표시 (이모지/이미지)
-  * 체력 바 (HP/MaxHP)
-  * 방어도 바 (Block)
-  * 스탯 표시 (값은 input 태그로 표시, **[6. 특수 기능]** 참조)
-    * 기본 공격력, 기본 방어도
-    * 검 보너스, 방패 보너스
-    * 공격 버프 (턴제)
-  * **[특수] 이번 턴 총 피해량**: 실시간 업데이트됨.
+### **2.2. 페이지별 구성**
 
-* **컬럼 2 (중앙): 메인 전투 UI**
-  * 턴 타이머 바 (5초)
-  * 4x4 빙고 그리드 (16개 카드)
-    * 카드 발동 시 배경색 강조 효과.
-    * 빙고 달성 시 해당 줄(Line) 강조 효과.
-  * **컨트롤 버튼**
-    * 전투 시작 (Start Battle)
-    * **일시정지 / 재개 (Pause / Resume)**: 테스트용 스탯 수정을 위한 버튼
+#### **A. 전투 화면 (Battle Screen)**
+기존의 메인 게임 화면. 3개의 수직 컬럼 레이아웃 유지.
+* **좌측**: 골렘(아군) 정보 및 스탯 에디터.
+* **중앙**: 턴 타이머, 4x4 빙고 그리드, 전투 제어 버튼(시작/일시정지).
+* **우측**: 적(잡몹) 정보 및 스탯 에디터.
 
-* **컬럼 3 (우측): 적 (잡몹) 정보**
-  * 총 3마리의 잡몹(Minion 1, 2, 3)을 세로로 배치.
-  * 각 잡몹은 다음 정보를 포함한다:
-    * 이름: "Minion 1", "Minion 2", "Minion 3"
-    * 에셋 표시 (이모지/이미지)
-    * **행동 의도 (Intent)**: 아이콘으로 표시 (⚔️ 공격, 🛡️ 방어, 💪 버프)
-    * 체력 바 (HP/MaxHP), 방어도 바 (Block)
-    * 스탯 표시 (값은 input 태그로 표시): HP, Block, 공격력, 방어력, 디버프
+#### **B. 전투 로그 페이지 (Battle Log Page)**
+* 전투 중 발생한 모든 로그를 상세히 확인하는 페이지.
+* 필터링 기능 (공격, 방어, 빙고 등) 제공 가능.
+* **다시 하기 버튼**: 로그 확인 후 즉시 재시작.
 
-* **전투 로그 모달**
-  * 상단 바의 '로그 보기' 버튼 또는 게임 종료 팝업을 통해 접근.
-  * 전투 진행 상황을 텍스트로 기록.
-  * **[신규] 다시 하기 버튼**: 로그 확인 후 즉시 재시작 가능.
+#### **C. 덱 구성 페이지 (Deck Config Page)**
+* **기능**:
+  * 현재 보유한 모든 카드(덱 + 버림 패 + 그리드)를 한눈에 볼 수 있는 "전체 덱" 뷰 제공.
+  * 카드 클릭 시 덱에서 제거.
+  * 우측 라이브러리에서 원소 클릭 시 덱에 추가.
+  * 덱 구성은 실시간으로 게임에 반영됨 (테스트 용도).
+* **UI**:
+  * **카드 라이브러리**: 추가 가능한 모든 카드 목록.
 
-* **게임 종료 팝업 (모달)**
-  * 승리/패배 결과 표시.
-  * 통계 표시: 총 턴 수, 총 빙고 횟수.
-  * 버튼: 다시 하기, 로그 보기.
+#### **D. 유물 구성 페이지 (Relic Config Page)**
+* **기능**: 게임 시작 전 또는 테스트 중에 유물을 자유롭게 활성화/비활성화하여 시너지를 테스트하는 기능.
+* **UI**:
+  * **보유 유물**: 현재 활성화된 유물.
+  * **전체 유물 목록**: 모든 유물 리스트 (클릭하여 토글).
+
+### **2.3. 게임 종료 팝업 (모달)**
+* 전투 화면 위에 오버레이로 표시.
+* 승리/패배 결과 및 통계 표시.
+* 버튼: 다시 하기, 로그 페이지로 이동.
 
 ## **3. 핵심 게임 데이터**
 
@@ -97,7 +91,7 @@
 | turnCount | 현재 턴 수 | 0 |
 | totalBingos | 누적 빙고 횟수 | 0 |
 
-## **4. 게임 흐름 (턴 로직) - 수정됨**
+## **4. 게임 흐름 (턴 로직)**
 
 게임은 isPaused가 false일 때 TURN_DURATION (5초) 마다 runTurn 함수를 통해 자동으로 진행된다.
 
@@ -128,9 +122,7 @@
 
 ## **5. 핵심 효과 로직**
 
-(v1.2와 동일, 시각적 연출만 강화됨)
-
-## **6. 특수 기능 (스탯 에디터) - 확장됨**
+## **6. 특수 기능 (스탯 에디터)**
 
 **목표**: 테스트와 밸런싱을 위해 모든 유닛의 핵심 스탯을 '일시정지' 상태에서 안전하게 수정하는 기능.
 
@@ -144,32 +136,35 @@
 * **일시정지 시**: 모든 input 필드가 활성화(Enable)되며 테두리가 강조됨. 값을 자유롭게 수정 가능.
 * **재개 시**: 수정된 값이 게임 상태(GameState)에 반영되고 게임이 계속됨.
 
-## **7. 향후 확장 아이디어: 유물 시스템 (Relics)**
+## **7. 유물 시스템 (Relics)**
 
-(기존 내용 유지)
+**목표**: 전투 보상으로 '유물'을 획득하여 특별한 패시브 효과를 얻는 시스템. (현재 개발 중)
 
-**목표**: 단조로운 전투에서 벗어나 로그라이크적 재미를 더하기 위해, 전투 보상으로 '유물'을 획득하여 특별한 패시브 효과를 얻는 시스템을 추가한다.
+### **7.1. 유물 목록 (구현됨)**
 
-### **7.1. 유물 획득**
+현재 코드베이스에 정의되어 있으며 UI상에서 확인 가능한 유물들입니다.
 
-* (예시) 전투 승리 시 3개의 유물 중 1개를 선택하여 획득할 수 있다.  
-* 획득한 유물은 UI(예: 화면 좌측 하단)에 아이콘으로 표시된다.
+* **T-스핀 유물 (Rare)**:
+  * **효과**: T자 모양(4칸)으로 같은 원소가 모이면 1-빙고로 인정.
+  * **아이콘**: 🧩
 
-### **7.2. 유물 아이디어 (테트리스 빙고)**
+* **L-스텝 유물 (Rare)**:
+  * **효과**: L자 모양(4칸)으로 같은 원소가 모이면 1-빙고로 인정.
+  * **아이콘**: 👢
 
-* **테트리스 빙고 유물**:  
-  * **개요**: 특정 '유물'을 획득하면, 4x4 그리드에서 가로/세로/대각선 외의 특정 '모양'으로도 원소 빙고가 인정된다.  
-  * **예시 유물**:  
-    * **T-스핀 유물**: 'T'자 모양(4칸)으로 같은 원소가 모이면 1-빙고로 인정.  
-    * **L-스텝 유물**: 'L'자 모양(4칸)으로 같은 원소가 모이면 1-빙고로 인정.  
-    * **O-블록 유물**: 'O'자(2x2) 모양(4칸)으로 같은 원소가 모이면 1-빙고로 인정.  
-    * **I-라인 유물**: (기존 4-빙고와 유사하나) 'I'자(4칸) 모양에 대한 보너스 강화.  
-  * **구현 복잡도 (높음)**:  
-    * checkLineBonuses 함수가 현재 10개의 '줄'만 검사하는 방식에서, 16개의 '모든 셀'을 순회하며 각 셀을 기준으로 T, L, O 등의 패턴을 검사하는 복잡한 로직으로 변경되어야 한다.  
-    * 플레이어가 보유한 유물(gameState.relics)을 확인하여 해당 패턴 검사를 활성화해야 한다.
+* **O-블록 유물 (Rare)**:
+  * **효과**: O자 모양(2x2)으로 같은 원소가 모이면 1-빙고로 인정.
+  * **아이콘**: 📦
 
-### **7.3. 기타 유물 아이디어**
+* **화염의 정수 (Common)**:
+  * **효과**: 불(FIRE) 빙고 발동 시, 무작위 적에게 5의 추가 피해.
+  * **아이콘**: 🔥
 
-* **원소 유물**: "불(FIRE) 빙고 발동 시, 무작위 적 1명에게 5의 추가 피해", "물(WATER) 카드의 회복량이 2배가 됨"  
-* **스탯 유물**: "전투 시작 시 swordBonus 10을 가지고 시작", "매 턴 block 5를 자동으로 획득"  
-* **카드 유물**: "덱에 불 카드 4장을 추가함", "바람(WIND) 카드가 항상 아군에게 버프를 줌"
+* **오래된 검 (Common)**:
+  * **효과**: 전투 시작 시 검 보너스 +10을 가지고 시작.
+  * **아이콘**: 🗡️
+
+### **7.2. 구현 현황**
+
+* **UI**: 유물 아이콘 표시, 툴팁(이름, 설명, 등급 색상), 클릭 시 활성화/비활성화 토글 기능 구현 완료.
+* **로직**: 유물 데이터 정의 완료. 실제 게임 내 효과(빙고 판정 변경, 스탯 보너스 등)는 아직 연결되지 않음.
