기획서 수정

--- a/연금술사 오토 배틀러 기획서.md
+++ b/연금술사 오토 배틀러 기획서.md
@@ -168,3 +168,22 @@
 
 * **UI**: 유물 아이콘 표시, 툴팁(이름, 설명, 등급 색상), 클릭 시 활성화/비활성화 토글 기능 구현 완료.
 * **로직**: 유물 데이터 정의 완료. 실제 게임 내 효과(빙고 판정 변경, 스탯 보너스 등)는 아직 연결되지 않음.
+## **8. 개발 현황 및 변경점 (v1.3)**
+
+### **8.1. 구현 완료 기능**
+*   **전투 시스템**: 턴제 진행, 카드 배포, 일반/조화 빙고 판정, 승패 조건.
+*   **UI/UX**:
+    *   4개 탭 구성 (전투, 로그, 덱, 유물).
+    *   스탯 에디터 (일시정지 시 활성화).
+    *   반응형 레이아웃 및 Tailwind CSS 스타일링.
+    *   에셋 토글 (이모지/이미지 모드).
+*   **덱 관리**: 덱에서 카드 제거 및 라이브러리에서 추가 기능.
+*   **배포**: GitHub Pages 호환성 확보 (HashRouter, 상대 경로).
+
+### **8.2. 미구현 기능 (To-Do)**
+*   **유물 효과 로직**: UI상에서 유물을 활성화해도 실제 전투 로직(빙고 판정 완화, 스탯 보너스 등)에 반영되지 않음.
+    *   `RelicSystem.js`에 데이터는 존재하나 `GameEngine.js`에서 이를 참조하여 분기 처리하는 로직 부재.
+
+### **8.3. 기획 변경 사항**
+*   **활성 유물 표시**: 전투 화면 중앙 상단에 현재 활성화된 유물 아이콘을 표시하여 직관성 개선.
+*   **기술 스택**: Context API 구조 개선 (`GameProvider`, `AssetProvider` 분리)으로 렌더링 최적화 및 Fast Refresh 지원.
