feat: Add gh-pages deployment scripts and update the HTML page title.

--- a/연금술사 오토 배틀러 기획서.md
+++ b/연금술사 오토 배틀러 기획서.md
@@ -187,3 +187,24 @@
 ### **8.3. 기획 변경 사항**
 *   **활성 유물 표시**: 전투 화면 중앙 상단에 현재 활성화된 유물 아이콘을 표시하여 직관성 개선.
 *   **기술 스택**: Context API 구조 개선 (`GameProvider`, `AssetProvider` 분리)으로 렌더링 최적화 및 Fast Refresh 지원.
+
+## **9. 배포 (Deployment)**
+
+### **9.1. 배포 도구**
+*   **패키지명**: `gh-pages`
+*   **용도**: `dist` 폴더의 빌드 결과물을 GitHub 저장소의 `gh-pages` 브랜치로 자동 업로드하여 GitHub Pages 호스팅을 활성화함.
+
+### **9.2. 설정 현황**
+*   **설치**: `npm install gh-pages --save-dev`
+*   **스크립트 (`package.json`)**:
+    *   `"predeploy": "npm run build"`: 배포 전 자동으로 최신 빌드 생성.
+    *   `"deploy": "gh-pages -d dist"`: `dist` 폴더 내용을 `gh-pages` 브랜치에 푸시.
+*   **경로 설정**:
+    *   `package.json`: `"homepage": "https://tglkwon.github.io/Calchemy.io"` 추가.
+    *   `vite.config.js`: `base: '/Calchemy.io/'` 설정으로 에셋 경로 문제 해결.
+
+### **9.3. 배포 방법**
+터미널에서 다음 명령어를 실행하면 빌드부터 배포까지 자동으로 수행된다.
+```bash
+npm run deploy
+```
